<resources>
    <string name="app_name">SecureChit-Chat</string>
    <string name="welcome_back">Welcome Back 👋</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
</resources>