<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signIn_layout"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    tools:context=".registerLogin.SignIn">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical">




      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_10sdp"
          android:text="@string/welcome_back"
          android:textStyle="bold"
          android:layout_gravity="center"
          android:textSize="@dimen/_18ssp"
          android:textColor="@color/primary_text"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="@dimen/_4sdp"
          android:text="@string/login_to_continue"
          android:textStyle="bold"
          android:textSize="@dimen/_12ssp"
          android:textColor="@color/secondary_text"/>


      <ImageView
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:layout_marginTop="@dimen/_20sdp"
          android:src="@drawable/signinimage"/>


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

      <EditText
          android:id="@+id/input_password"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_45sdp"
          android:background="@drawable/background_input"
          android:layout_marginTop="@dimen/_20sdp"
          android:hint="@string/password"
          android:imeOptions="actionDone"
          android:importantForAutofill="no"
          android:inputType="textPassword"
          android:paddingStart="@dimen/_16sdp"
          android:paddingEnd="@dimen/_16sdp"
          android:textColor="@color/primary_text"
          android:textSize="@dimen/_13ssp"/>


      <com.google.android.material.button.MaterialButton
          android:id="@+id/button_signIn"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_50sdp"
          android:layout_marginTop="@dimen/_20sdp"
          android:text="@string/sign_in"
          android:textColor="@color/white"
          android:textSize="@dimen/_13ssp"
          android:textStyle="bold"
          app:cornerRadius="@dimen/_8sdp"/>


      <TextView
          android:id="@+id/createNewAccount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_10sdp"
          android:text="@string/create_new_account"
          android:textColor="@color/primary"
          android:textSize="@dimen/_13ssp"
          android:textStyle="bold"/>



  </LinearLayout>






</ScrollView>